<resources>
    <string name="app_name">FinancyQ</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="message_login_page">Sign in to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello">Hello,</string>
    <string name="hello_page">Hello</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="message_signup_page">Create a new Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="message_welcome_page"> Empower yourself with our intuitive tools and educational resources designed to enhance your financial literacy. Transform your financial habits for a brighter future. Start your journey with FinancyQ today! </string>
    <string name="title_analizeq">AnalizeQ</string>
    <string name="title_edufinance">EduFinance</string>
    <string name="team">Amoeba Present</string>
    <string name="about_financyq">About FinancyQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="empty_data">data not found</string>
    <string name="title_education">Title</string>
    <string name="amoeba">Amoeba</string>
    <string name="profile">Profile</string>
    <string name="otp_verivication">OTP Verification</string>
    <string name="desc_otp">Enter the OTP sent to amoeba@bangkit.academy</string>
    <string name="verify_and_continue">Verify and Continue</string>
    <string name="back">Profile</string>
    <string name="financyq">FinancyQ</string>
    <string name="financyq_empowers_users_to_personal_finance_management_with_educational_resources">FinancyQ empowers users to personal finance management with educational resources, Through intuitive features such as expense tracking and budgeting, FinancyQ ensures users have control over their finances. Whether for daily expenses or long-term goals, FinancyQ offers a comprehensive solution to enhance financial literacy and foster responsible financial habits.</string>
    <string name="financyq_present">FinancyQ 2024</string>
    <string name="about_financy_q">About FinancyQ</string>
    <string name="about_desc">We are amoeba (Anak moeda berbakat) who have the expertise, energy and thinking to present FinancyQ, which is a financial technology solution that is innovative and beneficial to society.</string>
    <string name="ML_Team">1. Alya Sahrani (Universitas Pendidikan Indonesia)\n2. Dinar Ferdiansyah (Universitas Brawijaya)\n3. Muhammad Yasir Amri (Institut Pertanian Bogor)</string>
    <string name="CC_Team">1. Adrian Kusuma Widjaja Kardana (Universitas Pendidikan Indonesia)\n2. Farhan Nurhidayah (Universitas Muhammadiyah Prof Dr Hamka)</string>
    <string name="MD_Team">1. M. Fiqry Septiawan (Universitas Muslim Indonesia)\n2. Aisyah Husna Alifah (Universitas Pendidikan Indonesia)</string>
    <string name="pp1">Welcome to FinancyQ. We respect your privacy and are committed to protecting your personal data. This Privacy Policy will inform you about how we handle your personal data when you visit our website or use our services.</string>
    <string name="information_collect">Information We Collect\nWe may collect the following personal information: name, email address, phone number, and billing information.</string>
    <string name="use_information">How We Use Your Information\nWe use the information we collect in several ways. First, to provide and maintain our service, ensuring you have the best experience using our platform. Second, to notify you about changes to our services. Third, to allow participation in interactive features, enabling you to take full advantage of our offerings. Fourth, to provide customer support, assisting you with any issues or questions. Fifth, to gather analysis or valuable information to help us improve our services. Sixth, to monitor the usage of our service and ensure the website is functioning correctly. Lastly, to detect, prevent, and address technical issues, keeping our platform secure and operational.</string>
    <string name="data">Data Sharing and Disclosure\nWe do not share your personal information with third parties except in the following cases. First, with your consent, when you have given us explicit permission to share your information. Second, for legal reasons, when we are required to do so by law or in response to valid requests by public authorities. Third, in the event of a business transfer such as a merger, acquisition, or sale of assets, your personal data may be transferred.</string>
    <string name="contact">Contact Us\nIf you have any questions about this Privacy Policy, please contact us via email at FinancyQ. Thank you for using FinancyQ.</string>
    <string name="text_banner">Saving money is saving your life</string>
    <string name="income_expenditure">Income - Expenditure</string>
    <string name="analizeq">AnalizeQ</string>
    <string name="edufinance">EduFinance</string>
    <string name="Income">Income</string>
    <string name="expenditure">Expenditure</string>
    <string name="analyzeq">AnalyzeQ</string>
    <string name="see_details">See Details.</string>
    <string name="your_income">Your Income :</string>
    <string name="your_expenditure">Your Expenditure :</string>
    <string name="using_foto">Using Foto</string>
    <string name="manual">Manual</string>
    <string name="value_expenditure">Rp 5,000,000</string>
    <string name="value_income">Rp 1,000,000</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="in_which_category">In which category?</string>
    <string name="what_will_you_use_this_money_for">What will you use this money for?</string>
    <string name="name_of_income">Name of income</string>
    <string name="price">Price</string>
    <string name="name_of_expenditure">Name of expenditure</string>
    <string name="total_income">Total Income</string>
    <string name="save_income">Save Income</string>
    <string name="save_expenditure">Save Expenditure</string>
    <string name="details_your_income">Your Income</string>
    <string name="details_your_expenditure">Your Expenditure</string>
    <string name="details_expenditure">Details\nExpenditure</string>
    <string name="details_income">Details\nIncome</string>
    <string name="logo_financyq">Logo_FinancyQ</string>
    <string name="logo_otp">Logo_Otp</string>
    <string name="otp">OTP</string>
    <string name="bg_background">Bg_Background</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="resend">RESEND</string>
    <string name="didn_t_receive_otp_or_expired">Didn’t receive OTP or Expired?</string>
    <string name="title_set">Congratulations!</string>
    <string name="message_set">Your data has been successfully registered\n\nPlease check your email for the OTP code</string>
    <string name="continue_set">Continue</string>
    <string name="banner">banner</string>
    <string name="machine_learning_team">Machine Learning Team</string>
    <string name="cloud_computing_team">Cloud Computing Team</string>
    <string name="mobile_development_team">Mobile Development Team</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="message_logout">Are you sure want to logout?\nYou will need to login again</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="set_title">Confirm</string>
    <string name="set_message">Do you want to exit the application?</string>
    <string name="invalid_email_format">Email Format Wrong!</string>
    <string name="password_length_alert">Password must not be less than 8 Characters</string>
    <string name="example_expenditure">Example : buy something</string>
    <string name="example_price">Example : 250000</string>
    <string name="example_category_expend">Example : Salary</string>
    <string name="example_category_income">Example : Salary</string>
    <string name="example_income">Example : Invest</string>
    <string name="save">Save</string>
    <string name="source">Source</string>
    <string name="example_source">Example : Manual</string>
    <string name="manual_text">Manual</string>
    <string name="category">Category</string>
    <string name="total_expenditure">Total of Expenditure</string>
    <string name="export_pdf">Export PDF</string>
    <string name="data_not_found">Data not Found</string>
    <string name="username_length_alert">Username must not exceed 8 characters</string>
    <string name="username_or_email_already_exists">Username or email already exists</string>
    <string name="username_not_found">Username_not_found</string>
    <string name="id_user_not_found">ID User not found</string>
    <string name="resend_success">Resend Success</string>
    <string name="otp_has_been_resent_successfully">OTP has been resent successfully</string>
    <string name="ok">OK</string>
    <string name="otp_is_empty">OTP is Empty</string>
    <string name="verification_successfull">Verification Successful</string>
    <string name="otp_verification_was_successfull">OTP Verification was successful</string>
    <string name="please_fill_in_all_columns">Please fill in all columns</string>
    <string name="failed_to_add_income">Failed to add income</string>
    <string name="congratulations">Congratulations!</string>
    <string name="failed_to_add_expenditure">Failed to add expenditure</string>
    <string name="input_data_expenditure">Input data expenditure successfully</string>
    <string name="input_data_income">Input data income successfully</string>
    <string name="you_have_successfully_login">You have successfully login!</string>
    <string name="continue_value">Continue</string>
    <string name="email_or_password_cannot_be_empty">Email or Password cannot be empty</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_want_to_delete_it">Are you sure want to delete it?</string>
    <string name="are_you_sure_about_this_change">Are you sure about this change?</string>
    <string name="results">Results</string>
    <string name="receipt">Receipt data check</string>
    <string name="empty_image_warning">Please select image first</string>
    <string name="foto_text">Photo</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="choice_date">Choice Date</string>
    <string name="date">Date</string>
    <string name="save_data_income">Save Income...</string>
    <string name="net">Net</string>
    <string name="please_wait">Please Wait...</string>
    <string name="verifycation_code">Verifycation Code...</string>
    <string name="select_month_year">Select Month &amp; Year</string>
    <string name="transaction_period_label">Transaction %1$s %2$d</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="all">All</string>
</resources>