<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.about.PrivacyPolicyActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="@string/back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Privacy Policy"
        android:textSize="20sp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pp1"
                android:textColor="@color/orange"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tv_info_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_collect"
                android:textSize="14sp"
                android:textColor="@color/orange"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tv_how_we_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_information"
                android:textSize="14sp"
                android:textColor="@color/orange"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tv_data_sharing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textSize="14sp"
                android:textColor="@color/orange"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tv_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="14sp"
                android:textColor="@color/orange"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>