<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.about.AboutFinancyQActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="@string/back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_aboutfinancyq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_financy_q"
        android:textSize="20sp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_financyq"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/financyq"
        android:textSize="32sp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/financyq_empowers_users_to_personal_finance_management_with_educational_resources"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/financyq_present"
        android:textSize="12sp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>