<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.details.DetailsIncomeActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="@string/back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_your_expenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_your_expenditure"
        android:textSize="25sp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvEmptyMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:textSize="14sp"
        android:visibility="gone"
        android:text="@string/data_not_found"/>

    <ProgressBar
        android:id="@+id/progressBarDetailExpenditure"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvPeriodSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Pengeluaran Juni 2025"
        android:textSize="16sp"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:drawablePadding="4dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_your_expenditure"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFilter"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tvPeriodSelector"
        app:layout_constraintStart_toEndOf="@id/tvPeriodSelector"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/periodToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:singleSelection="true"
        app:selectionRequired="false"
        app:layout_constraintTop_toBottomOf="@id/tvPeriodSelector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDaily"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:text="@string/Daily" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWeekly"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:text="@string/Weekly" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMonthly"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:text="@string/Monthly" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDetailExpenditure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/periodToggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        tools:listitem="@layout/item_list_detailsexpenditure"
        tools:itemCount="5"
         />

</androidx.constraintlayout.widget.ConstraintLayout>
